feat: base에 노선시간관리 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -106,6 +106,9 @@
                 <a href="{% url 'dispatch:regularly_connect' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">출/퇴근 배차표</li>
                 </a>
+                <a href="{% url 'dispatch:regularly_route_time' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">노선시간관리</li>
+                </a>
               </ul>
             </div>
           </div>
