--- a/static/css/salary/weekly_statustwo.css
+++ b/static/css/salary/weekly_statustwo.css
@@ -104,12 +104,27 @@
 }
 
 .theadTh:nth-child(1){width: 5%;}
-.theadTh:nth-child(2){width: 5%;}
-.theadTh:nth-child(3){width: 10%;}
-.theadTh:nth-child(4){width: 52.5%; height: 100%;}
-.theadTh:nth-child(5){width: 7.5%;}
-.theadTh:nth-child(6){width: 10%;}
-.theadTh:nth-child(7){width: 10%;}
+.theadTh:nth-child(2){width: 11%;}
+.theadTh:nth-child(3){width: 42%; height: 100%;}
+.theadTh:nth-child(4){width: 6%;}
+.theadTh:nth-child(5){width: 12%;}
+.theadTh:nth-child(6){width: 6%;}
+.theadTh:nth-child(7){width: 12%;}
+.theadTh:nth-child(8){width: 6%;}
+
+.theadThThContent {width: 50%;
+height: 100%;}
+
+.theadThTitle{
+    height: 30%;
+    border-bottom: 0.1rem solid #cdcdce;
+}
+
+.first{border-right: 0.1rem solid #CDCDCE;}
+
+.theadThContent{
+    height: 70%;
+}
 
 .tableCalenderTItle,
 .tableCalenderDate,
@@ -125,91 +140,36 @@
     width: 100%;
     height: calc(100% - 6rem);
     background-color: white;
-
 }
 
 .personContainer{
     display: flex;
     box-sizing: border-box;
     width: 100%;
-    height: 18rem;
+    height: 4rem;
 }
 
-.orderContainer{
-    box-sizing: border-box;
-    width: 20%;
-    height: 100%;
-    border-right: 0.1rem solid #CDCDCE;
-    border-bottom: 0.1rem solid #CDCDCE;
-}
+.tbodyTd:nth-child(1){width: 5%;}
+.tbodyTd:nth-child(2){width: 11%;}
+.tbodyTd:nth-child(3){width: 6%;}
+.tbodyTd:nth-child(4){width: 6%;}
+.tbodyTd:nth-child(5){width: 6%;}
+.tbodyTd:nth-child(6){width: 6%;}
+.tbodyTd:nth-child(7){width: 6%;}
+.tbodyTd:nth-child(8){width: 6%;}
+.tbodyTd:nth-child(9){width: 6%;}
+.tbodyTd:nth-child(10){width: 6%;}
+.tbodyTd:nth-child(11){width: 6%;}
+.tbodyTd:nth-child(12){width: 6%;}
+.tbodyTd:nth-child(13){width: 6%;}
+.tbodyTd:nth-child(14){width: 6%;}
+.tbodyTd:nth-child(15){width: 6%;}
+.tbodyTd:nth-child(16){width: 6%;}
 
-.valueContainer{    
-    box-sizing: border-box;
-    width: 80%;
-    height: 100%;
-
+.totalValueDate {
+    width: calc(100% / 14);
 }
-
-.orderContainer{
-    height: 100%;
-    display: flex;
-}
-
-.orderList:nth-child(1){
-    width: 25%;
-    border-right: 0.1rem solid #CDCDCE;
-}
-.orderList:nth-child(2){
-    width: 25%;
-    border-right: 0.1rem solid #CDCDCE;
-}
-.orderList:nth-child(3){
-    height: 100%;
-    width: 50%;
-}
-
-.orderListList{
-    height: 25%;
-    width: 100%;
-}
-.orderListList{
-    height: 25%;
-    width: 100%;
-}
-.orderListList:nth-child(3){
-    height: 50%;
-    width: 100%
-}
-
-.orderListListTitle{
-    height: 100%;
-    width: 50%;
-}
-
-.orderListListList{
-    height: 50%;
-    width: 100%;
-}
-
-.orderListListContent{
-    width: 50%;
-    height: 100%;
-}
-
-.orderListBorder{
-    border-bottom: 0.1rem solid #CDCDCE;
-}
-
-.orderListBorderRight{
-    border-right: 0.1rem solid #CDCDCE;;
-}
-
-.totalValue, .nightValue, .holidayValue, .holiday8Value{
-    width: 100%;
-    height: 25%;
-}
-
-.totalValueDate:nth-child(1){width: 9.375%;}
+/* .totalValueDate:nth-child(1){width: 9.375%;}
 .totalValueDate:nth-child(2){width: 9.375%;}
 .totalValueDate:nth-child(3){width: 9.375%;}
 .totalValueDate:nth-child(4){width: 9.375%;}
@@ -219,39 +179,12 @@
 .totalValueDate:nth-child(8){width: 9.375%;}
 .totalValueDate:nth-child(9){width: 12.5%;}
 .totalValueDate:nth-child(10){width: 12.5%;}
+.totalValueDate:nth-child(11){width: 12.5%;}
+.totalValueDate:nth-child(12){width: 12.5%;}
+.totalValueDate:nth-child(13){width: 12.5%;}
+.totalValueDate:nth-child(14){width: 12.5%;} */
 
-.nightValueDate:nth-child(1){width: 9.375%;}
-.nightValueDate:nth-child(2){width: 9.375%;}
-.nightValueDate:nth-child(3){width: 9.375%;}
-.nightValueDate:nth-child(4){width: 9.375%;}
-.nightValueDate:nth-child(5){width: 9.375%;}
-.nightValueDate:nth-child(6){width: 9.375%;}
-.nightValueDate:nth-child(7){width: 9.375%;}
-.nightValueDate:nth-child(8){width: 9.375%;}
-.nightValueDate:nth-child(9){width: 12.5%;}
-.nightValueDate:nth-child(10){width: 12.5%;}
 
-.holidayValueDate:nth-child(1){width: 9.375%;}
-.holidayValueDate:nth-child(2){width: 9.375%;}
-.holidayValueDate:nth-child(3){width: 9.375%;}
-.holidayValueDate:nth-child(4){width: 9.375%;}
-.holidayValueDate:nth-child(5){width: 9.375%;}
-.holidayValueDate:nth-child(6){width: 9.375%;}
-.holidayValueDate:nth-child(7){width: 9.375%;}
-.holidayValueDate:nth-child(8){width: 9.375%;}
-.holidayValueDate:nth-child(9){width: 12.5%;}
-.holidayValueDate:nth-child(10){width: 12.5%;}
-
-.holiday8ValueDate:nth-child(1){width: 9.375%;}
-.holiday8ValueDate:nth-child(2){width: 9.375%;}
-.holiday8ValueDate:nth-child(3){width: 9.375%;}
-.holiday8ValueDate:nth-child(4){width: 9.375%;}
-.holiday8ValueDate:nth-child(5){width: 9.375%;}
-.holiday8ValueDate:nth-child(6){width: 9.375%;}
-.holiday8ValueDate:nth-child(7){width: 9.375%;}
-.holiday8ValueDate:nth-child(8){width: 9.375%;}
-.holiday8ValueDate:nth-child(9){width: 12.5%;}
-.holiday8ValueDate:nth-child(10){width: 12.5%;}
 
 .personContainer{
     border-bottom: 0.1rem solid #CDCDCE;
